串口通信程序基础功能完成，待完成打开文件、发送文件、HEX显示、HEX发送 功能

--- a/SerialCommunications/SerialCommunications.vcxproj.filters
+++ b/SerialCommunications/SerialCommunications.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Utils.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CMscomm.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SerialCommunications.cpp">
@@ -48,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Utils.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CMscomm.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
